@@ -28,7 +28,8 @@ rules_file=./etc/my_movies.xml
 auto_fence=false
 internal_port=60001
 event_port=60002
-synchro_timeout=15
+synchro_timeout=20
+force_synchro_if=cliche81,cliche82
 starting_strategy=CONFIG
 conciliation_strategy=USER
 stats_periods=5,60,600
