@@ -1,10 +1,15 @@
 0.5 (2021-02-xx)
 ----------------
 
+* New option in the supvisors section to force the end of the synchro phase when a subset of nodes are active
+
 * New LOCAL starting strategy added to command the starting of an application on the local node only
 
-* Fixed https://github.com/julien6387/supvisors/issues/86
+* Fixed https://github.com/julien6387/supvisors/issues/87
   Under particular circumstances, Supvisors could have multiple master nodes
+
+* Fixed https://github.com/julien6387/supvisors/issues/86
+  The starting and stopping sequences may fail and block when a sub-sequence includes only unstartable programs
 
 * Fixed https://github.com/julien6387/supvisors/issues/85
   When using '#' in the Supvisors rules file, a subset of nodes can optionally be defined
